objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CRMforNonProfit__Account_Num__c</fullName>
        <label>Account Num.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Avarage_Donation__c</fullName>
        <formula>CRMforNonProfit__noac_celkova_hodnota_finacni_dary__c /  CRMforNonProfit__noac_pocet_financnich_daru__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Donation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Communication__c</fullName>
        <label>Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Contact_Category__c</fullName>
        <label>Contact Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dobrovolník</fullName>
                </value>
                <value>
                    <fullName>Zaměstnanec</fullName>
                </value>
                <value>
                    <fullName>Dárce</fullName>
                </value>
                <value>
                    <fullName>Brigádník</fullName>
                </value>
                <value>
                    <fullName>Člen sdružení</fullName>
                </value>
                <value>
                    <fullName>Právník</fullName>
                </value>
                <value>
                    <fullName>Fotograf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DaysLast3Donations__c</fullName>
        <label>Days between last 3 transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DniMeziDary__c</fullName>
        <formula>IF(  CRMforNonProfit__noac_pocet_financnich_daru__c &gt; 0, ( DATEVALUE( CRMforNonProfit__noac_datum_posledniho_financniho_daru__c) -  CRMforNonProfit__First_Transaction_Date__c ) / CRMforNonProfit__noac_pocet_financnich_daru__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Počet dní mezi dary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DniOdPoslednihoDaru__c</fullName>
        <formula>TODAY() - DATEVALUE( CRMforNonProfit__noac_datum_posledniho_financniho_daru__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Počet dní od posledního daru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Document_Creation_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Donation_Receipt_BCC__c</fullName>
        <description>Enter email addresses separate by semicolon ;</description>
        <label>Donation Receipt BCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Donation_Receipt_CC__c</fullName>
        <description>Enter email addresses separate by semicolon ;</description>
        <label>Donation Receipt CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Donation_Receipt__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Donation Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__First_Transaction_Date__c</fullName>
        <label>First Transaction Date</label>
        <summarizedField>CRMforNonProfit__Transaction__c.CRMforNonProfit__Transaction_Date__c</summarizedField>
        <summaryForeignKey>CRMforNonProfit__Transaction__c.CRMforNonProfit__Contact__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__General_Opt_In__c</fullName>
        <label>General Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Volunteers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Letter_Title__c</fullName>
        <formula>IF( CONTAINS( TEXT( Salutation), &quot;paní&quot;), 
       &quot;Vážená paní&quot;, 
       IF( CONTAINS( TEXT( Salutation), &quot;pan&quot;), 
            &quot;Vážený pane&quot;, 
            Text( Salutation)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Letter Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__PossiblePermanentDonor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Permanent Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Preffered_Channel__c</fullName>
        <label>Preferred Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Skip_from_transactions_calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check for the default contact</inlineHelpText>
        <label>Skip from transactions calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Title_Prefix__c</fullName>
        <label>Title Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Title_Suffix__c</fullName>
        <label>Title Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Amount_14_36__c</fullName>
        <label>Transaction Amount (14-36)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Amount_14__c</fullName>
        <label>Transaction Amount (14)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Amount_2008__c</fullName>
        <label>Transaction Amount 2008</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Amount_2009__c</fullName>
        <label>Transaction Amount 2009</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Count_14_36__c</fullName>
        <label>Transaction Count (14-36)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Count_14__c</fullName>
        <label>Transaction Count (14)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Count_2008__c</fullName>
        <label>Transaction Count 2008</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Count_2009__c</fullName>
        <label>Transaction Count 2009</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transactions_Count__c</fullName>
        <label>Transactions Count</label>
        <summaryForeignKey>CRMforNonProfit__Transaction__c.CRMforNonProfit__Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transactions_Total__c</fullName>
        <label>Transactions Total</label>
        <summarizedField>CRMforNonProfit__Transaction__c.CRMforNonProfit__Transaction_Amount__c</summarizedField>
        <summaryForeignKey>CRMforNonProfit__Transaction__c.CRMforNonProfit__Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Variable__c</fullName>
        <label>Variable</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Vocative__c</fullName>
        <label>Vocative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Wrond_Correspondence_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wrond Correspondence Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Wrong_Permanent_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wrong Permanent Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__datum_posledni_kampane__c</fullName>
        <label>Datum poslední kampaně</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__noac_celkova_hodnota_finacni_dary__c</fullName>
        <label>Celková hodnota - dary(Trn. bez Acc)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__noac_datum_posledniho_financniho_daru__c</fullName>
        <label>Datum posledního daru(Trn. bez Acc)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__noac_pocet_financnich_daru__c</fullName>
        <label>Počet finančních darů(Trn. bez Acc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>